--- a/C2C3_JupyterPythonBasics/HomeworkWeek1.ipynb
+++ b/C2C3_JupyterPythonBasics/HomeworkWeek1.ipynb
@@ -29,6 +29,7 @@
    "outputs": [],
    "source": [
     "# Take the sample scrambled DNA fragment from above and assign it to the variable 'seq'\n",
+    "# Use single or double quotes around the string\n",
     "### Start code here ###\n",
     "seq = None\n",
     "###  End code here  ###"
@@ -47,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First let's captialize all of the letters\n",
+    "# First let's captialize all of the letters with str.upper()\n",
     "### Start code here ###\n",
     "seq = None\n",
     "###  End code here  ###\n",
@@ -60,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Then let's remove the inserted '^n's\n",
+    "# Then let's remove the inserted '^n's with str.replace('^N', '') \n",
     "### Start code here ###\n",
     "seq = None\n",
     "###  End code here  ###\n",
@@ -104,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Now let's test that function on the sample sequence\n",
+    "# Now let's test the function on the original sample sequence\n",
     "seq = 'GaCc^ncAAtcGattG^ngGtC11746'\n",
     "print(unscrambler(seq))"
    ]
@@ -115,10 +116,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Finally run this block of code to test your function on 1,000 scrambled sequences \n",
+    "\n",
     "import pickle\n",
     "\n",
     "# Load sample data\n",
-    "with open('seqset.pickle', 'rb') as f:\n",
+    "with open('data/seqset.pickle', 'rb') as f:\n",
     "    testseq = pickle.load(f)\n",
     "\n",
     "# Unscramble the sample data\n",
@@ -127,17 +130,21 @@
     "    unscram.append(unscrambler(i))\n",
     "\n",
     "# Load unscrambled key\n",
-    "with open('unscram.pickle', 'rb') as f:\n",
+    "with open('data/unscram.pickle', 'rb') as f:\n",
     "    unscram_key = pickle.load(f)\n",
     "\n",
     "if unscram == unscram_key:\n",
     "    print('Congratulations! Your unscrambler function worked!')\n",
     "else:\n",
     "    print(\"Keep trying- something's not quite right.\")\n",
-    "    print(\"The first five from your unscrambled set:\")\n",
-    "    print(unscram[:4])\n",
-    "    print(\"The first five from the key:\")\n",
-    "    print(unscram_key[:4])\n",
+    "\n",
+    "# Compare before, after, and my result\n",
+    "print(\"The first five scrambled sequences:\")\n",
+    "print(unscram[:4])\n",
+    "print(\"The first five from your unscrambled set:\")\n",
+    "print(unscram[:4])\n",
+    "print(\"The first five from the key:\")\n",
+    "print(unscram_key[:4])\n",
     "    \n",
     "        "
    ]
