Incorporate Maia comments

--- a/C2C3_JupyterPythonBasics/PythonBasics.ipynb
+++ b/C2C3_JupyterPythonBasics/PythonBasics.ipynb
@@ -35,16 +35,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__TIP2:__ To run the code in a cell quickly, press Ctrl-Enter."
+    "__TIP1:__ To enter command mode press `Esc`. You can then add cells by pressing `b` for below or `a` for above\n",
+    "Other shortcuts for making, deleting, and moving cells are in the menubar at the top of the\n",
+    "screen."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__TIP1:__ To enter command mode press `Esc`. You can then add cells by pressing `b` for below or `a` for above\n",
-    "Other shortcuts for making, deleting, and moving cells are in the menubar at the top of the\n",
-    "screen."
+    "__TIP2:__ To run the code in a cell quickly, press Ctrl-Enter."
    ]
   },
   {
@@ -66,7 +66,7 @@
    "outputs": [],
    "source": [
     "# Try entering various things here and run the cell with Ctrl-Enter\n",
-    "# Try an integer, a floating-point number, 'False', and a word\n",
+    "# Try an integer, a floating-point number, 'False', and a string surrounded by quotes\n",
     "\n",
     "### Start code here ###\n",
     "None\n",
@@ -74,38 +74,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now try some basic math. You can use all of the normal symbols for math operation:\n",
-    "\n",
-    "-  \\* for multiplication\n",
-    "-  \\/ for division\n",
-    "-  \\** for exponation \n",
-    "-  Parenthesis to set order of operation"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Try several simple equations\n",
-    "# Try entering two equations, each on its own line\n",
-    "\n",
-    "### Start code here ###\n",
-    "None\n",
-    "### End code here ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use print to show multiple things in the same cell\n",
+    "# Use print() to show multiple things in the same cell\n",
     "# Note that you can use single or double quotes for strings\n",
     "\n",
     "### Start code here ###\n",
@@ -216,6 +190,25 @@
     "print(b)\n",
     "print(a or b)\n",
     "print(a and b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### <font color=blue>Flash quiz</font>\n",
+    "Use the cell below to calculate $3x^2 + 5x + 13$ when x = 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = None\n",
+    "print (y)"
    ]
   },
   {
@@ -353,6 +346,38 @@
     "#a.\n",
     "print(a.capitalize())\n",
     "print(a.replace('l', 'X'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "#### <font color=blue>Flash quiz</font>\n",
+    "1. Use the string function capitalize to capitalize the first letter of each word\n",
+    "2. Replace '...' with ','"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Steve albini...j. t. hutt...sid meier\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"steve albini...j. t. hutt...sid meier\"\n",
+    "# Capitalize\n",
+    "a = a.capitalize()\n",
+    "#a = a.replace('...',',')\n",
+    "\n",
+    "print (a)"
    ]
   },
   {
