Complete overhaul of Class 3

--- a/C2C3_JupyterPythonBasics/HomeworkWeek1.ipynb
+++ b/C2C3_JupyterPythonBasics/HomeworkWeek1.ipynb
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Take the sample scrambled DNA fragment from above and assign it to the variable 'seq'\n",
-    "# Use single or double quotes around the string\n",
+    "# Copy the sample scrambled DNA fragment from above and assign it to the variable 'seq'\n",
+    "# Remember to use single or double quotes around a string\n",
     "### Start code here ###\n",
     "seq = None\n",
     "###  End code here  ###"
@@ -100,14 +100,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test to see if your function works with one sample\n",
+    "Now you can call `unscrambler()` and pass it a scrambled sequence and you should get back the expected sequence. Let's try doing all three steps on the same sample sequence we started with."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now let's test the function on the original sample sequence\n",
-    "seq = 'GaCc^ncAAtcGattG^ngGtC11746'\n",
-    "print(unscrambler(seq))"
+    "one_seq = 'GaCc^ncAAtcGattG^ngGtC11746'\n",
+    "print(unscrambler(one_seq))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "#### Now use your function on a **thousand** scrambled sequences\n",
+    "If your method worked on one sequence, let's try it on 1,000. One of the biggest benefits of learning basic code is that you can write quick scripts that do a lot of repetetive work for you. \n",
+    "\n",
+    "The block of code below has several things we have yet to cover in class. You don't need to understand what's happening here (though you're free to poke around and I'm happy to answer questions.\n",
+    "\n",
+    "Simply run the cell and see how well your version of `unscrambler()` works. "
    ]
   },
   {
