Nucleic Acid classes imported to ipynb

--- a/C4C5_ Numpy_and_pandas/Class 4 and 5- Introduction to NumPy and Pandas.ipynb
+++ b/C4C5_ Numpy_and_pandas/Class 4 and 5- Introduction to NumPy and Pandas.ipynb
@@ -25,9 +25,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's upgrade! Adding libraries to python\n",
+    "### Adding libraries to python\n",
     "\n",
-    "First we need to import the libraries we want to use. This is the same process you used for the last homework to add new functions to python, but these packages add hundreds of new functions\n",
+    "First we need to import the libraries we want to use. This is the same process you used for the last homework to add a function to python, but libraries can add hundreds of new functions\n",
     "\n",
     "When we import these libraries we can give them an alias, which is easier to remember and type. The ones used below are common for these packages. "
    ]
@@ -72,9 +72,9 @@
     "\n",
     "NumPy arrays are essentially lists that have two important restrictions:\n",
     "\n",
-    " - An array can only hold one type of data\n",
+    " - An array can only hold **one** type of data\n",
     " - Arrays are unmutable: you **can** change the contents, but you **can't** change the size of the array or the data type\n",
-    "     - To \"add\" to an array you have to make a new array that is a copy plus the new data\n",
+    "     - Why you append to an array you actually copy the array and add new data to the copy\n",
     " \n",
     "Why would we want a list with extra restrictions? The short answer is speed. The computer only needs to check the type of data once for the array, not once for each variable. This adds up when you have huge arrays like the results of an 'omics' experiment. \n",
     "\n",
