--- a/C2C3_JupyterPythonBasics/PythonBasics.ipynb
+++ b/C2C3_JupyterPythonBasics/PythonBasics.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,9 +124,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# You can show multiple results using the print() command\n",
     "# Try the same two variables using print()\n",
@@ -156,9 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.972 2 Mycobacterium tuberculosis True\n"
+     ]
+    }
+   ],
    "source": [
     "# Let's store some things as variables\n",
     "observed_fold_change = 1.972\n",
@@ -171,9 +188,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n",
+      "<class 'NoneType'>\n"
+     ]
+    }
+   ],
    "source": [
     "# The type() function tells us the type of thing we have\n",
     "# Check the type of the variables from above\n",
@@ -187,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,9 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "prior_sig_fc: None\n",
+      "significant_fold_change None\n"
+     ]
+    }
+   ],
    "source": [
     "print (\"prior_sig_fc:\", None)\n",
     "print (\"significant_fold_change\", None)"
@@ -232,9 +269,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'NoneType' and 'NoneType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-12-dce933d3a59d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m**\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# a to the power of b (a^b does something completely different!)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'NoneType' and 'NoneType'"
+     ]
+    }
+   ],
    "source": [
     "# Standard math operators work as expected on numbers\n",
     "# Set a and b to small integers and then run this cell\n",
@@ -339,20 +388,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n",
-      "5\n",
-      "3\n",
-      "15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# There are thousands of functions that operate on things\n",
     "# We've already used the type() and print() functions\n",
@@ -766,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,15 +814,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "856.5286135156348"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Start code here ### (~4 lines)\n",
-    "read_counts = None\n",
-    "total_reads = None\n",
-    "CPM_first_sample = None\n",
-    "None\n",
+    "read_counts = reads[:7]\n",
+    "total_reads = reads[7:]\n",
+    "CPM_first_sample = 10**6 / total_reads[0] *read_counts[0]\n",
+    "CPM_first_sample\n",
     "### End code here ###"
    ]
   },
@@ -809,9 +858,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DMT1:\n",
+      "DMT2:\n",
+      "DMT3:\n",
+      "NoDrug1:\n",
+      "NoDrug2:\n",
+      "NoDrug3:\n"
+     ]
+    }
+   ],
    "source": [
     "# A basic for loop - don't forget the white space!\n",
     "for sample in samplenames:\n",
@@ -831,21 +893,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dmt1!\n",
+      "dmt2!\n",
+      "dmt3!\n",
+      "nodrug1!\n",
+      "nodrug2!\n",
+      "nodrug3!\n"
+     ]
+    }
+   ],
    "source": [
     "# Indentation error: Fix it!\n",
     "for sample in samplenames:\n",
     "    lowercase = sample.lower()\n",
-    "   print(lowercase + '!') # Bad indent"
+    "    print(lowercase + '!') # Bad indent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum is 1\n",
+      "Sum is 5\n",
+      "Sum is 82\n",
+      "Sum is 85\n"
+     ]
+    }
+   ],
    "source": [
     "# You can sum all of the values in a collection using a for loop\n",
     "numlist = [1, 4, 77, 3]\n",
@@ -854,14 +940,29 @@
     "for num in numlist:\n",
     "    total = total + num\n",
     "    \n",
-    "print(\"Sum is\", total)"
+    "    print(\"Sum is\", total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "2 4\n",
+      "3 8\n",
+      "4 16\n",
+      "5 32\n",
+      "6 64\n",
+      "7 128\n",
+      "Reached a product of 128 at step number 7\n"
+     ]
+    }
+   ],
    "source": [
     "# While loops are useful when you don't know how many steps you will need,\n",
     "# and want to stop once a certain condition is met.\n",
@@ -877,9 +978,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 DMT1 DMT1\n",
+      "2 DMT2 DMT2\n",
+      "3 DMT3 DMT3\n",
+      "4 NoDrug1 NoDrug1\n",
+      "5 NoDrug2 NoDrug2\n",
+      "6 NoDrug3 NoDrug3\n"
+     ]
+    }
+   ],
    "source": [
     "# Often we want to loop over the indexes of a collection, not just the items\n",
     "# python gives us a handy way to do that: enumerate()\n",
@@ -890,9 +1004,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 3\n",
+      "2 4 8\n",
+      "3 5 15\n"
+     ]
+    }
+   ],
    "source": [
     "# Sometimes we want to loop through multiple lists\n",
     "# you can use zip() to zip together lists\n",
