--- a/C4C5_ Numpy_and_pandas/Class5_PandasNumPyFunctions.ipynb
+++ b/C4C5_ Numpy_and_pandas/Class5_PandasNumPyFunctions.ipynb
@@ -83,7 +83,15 @@
    "outputs": [],
    "source": [
     "#Default options for DataFrames can be adjusted\n",
-    "pd.get_option(None)\n",
+    "pd.get_option(None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pd.set_option(None)\n",
     "# The default number of columns to show is 20. Change it to 10.\n",
     "pd.set_option(None)"
@@ -634,10 +642,50 @@
    "outputs": [],
    "source": [
     "# Pick 10 items from a given list, with equal probability\n",
-    "np.random.None(['a', 'e', 'i', 'o', 'u'], size=10)  \n",
+    "np.random.choice(['A', 'C', 'G', 'T', 'N'], size=10)  \n",
     "\n",
     "# Pick 10 items from a given list with a predefined probability 'p'\n",
-    "np.random.None(['a', 'e', 'i', 'o', 'u'], size=10, p=[0.3, .1, 0.1, 0.4, 0.1])"
+    "np.random.choice(['a', 'e', 'i', 'o', 'u'], size=10, p=[0.3, .1, 0.1, 0.4, 0.1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stats with scipy\n",
+    "\n",
+    "The `scipy` library contains a larger range of mathematical functions. Like `numpy`, these are broken up into sublibraries. We will focus on the `scipy.stats` module. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'info' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-c36b83a2d160>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstats\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'info' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "stats.ttest_ind(rvs1,rvs2)"
    ]
   },
   {
